--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="card_background_color">#EAEAEA</color>
     <color name="light_gray">#C4919191</color>
+    <color name="light_blue_background">#B2E1F5FE</color>
+    <color name="button_red">#D50000</color>
 </resources>
