--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,21 @@
     <!-- Base application theme. -->
     <style name="Theme.BinViewApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">#5C6BC0</item>
+        <item name="colorPrimaryVariant">#5C6BC0</item>
+        <item name="colorOnPrimary">#E8EAF6</item>
+        <item name="colorSurface">#F6F7FF</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">#0097A7</item>
+        <item name="colorSecondaryVariant">@color/white</item>
         <item name="colorOnSecondary">@color/black</item>
-        <item name="drawableTint">@color/black</item>
+        <item name="drawableTint">#5C6BC0</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="imageViewTint" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:tint">#5C6BC0</item>
+    </style>
+
 </resources>
