--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,4 +14,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="imageViewTint" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="android:tint">@color/white</item>
+    </style>
 </resources>
